# beater.js

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  README.md  final.md
.claude/skills/beater-test-gates/: SKILL.md
.claude/skills/review-pr/: SKILL.md
.github/workflows/: ci.yml
crates/beater-agent/: Cargo.toml
crates/beater-agent/src/: anthropic.rs  journal.rs  lib.rs  llm.rs  registry.rs  runner.rs  trace_export.rs
crates/beater-cli/: Cargo.toml
crates/beater-cli/src/: main.rs
crates/beater-cli/tests/: dev_smoke.rs
crates/beater-connect/src/: lib.rs  main.rs
crates/beater-py/: Cargo.toml
crates/beater-py/src/: lib.rs
crates/beater-runtime/: Cargo.toml
crates/beater-runtime/src/: agent_config.rs  beater_agent.js  beater_connect.js  bootstrap.js  config.rs  crawl.rs  lib.rs  loader.rs  mcp.rs  router.rs  server.rs  worker.rs
docs/: integrations.md  observability.md  runtime-limits.md  security.md  tools.md
examples/hello/: beater.toml
examples/hello/agents/support/: agent.ts
examples/hello/agents/support/tools/: summarize_numbers.py
examples/hello/app/routes/: index.client.ts  index.tsx
examples/hello/app/routes/api/: health.ts
research/: agent-memory.md
scripts/: client-hydration-gate.sh  docker-cold-start-gate.sh  m2-live-gate-self-test.sh  m2-live-gate.sh  npm-compat-gate.sh  remote-mcp-provider-gate.cjs  rsc-flight-gate.cjs  vendor.sh
